[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
pixels = "0.13.0"
rayon = "1.7.0"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
